# fractal-prototypes

./: .gitignore  .luacheckrc  LICENSE  README.org  fractals.cabal  mandelbrot.lua
lua/: julia.lua  mandelbrot.lua
sample_generators/: generate_sample_images.hs
src/: .luacheckrc  ImageUtils.hs  Mandelbrot.hs  mandelbrot.lua
t/: .luacheckrc  mandelbrot.lua
test/: TestFractals.hs
